# cinema

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose-dev.yml  docker-compose-staging.yml  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.prod.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  nightly.yml
authors/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
authors/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
authors/tests/: test_views.py
cinema/: settings.py  urls.py
core/: cache_utils.py  exceptions.py  permissions.py  tests.py  views.py
core/management/commands/: clear_data.py  create_default_data.py
films/: admin.py  factories.py  models.py  serializers.py  services.py  urls.py  views.py
films/management/commands/: import_tmdb.py
films/migrations/: 0001_initial.py  0002_initial.py  0003_remove_film_film_author_status_idx_and_more.py
films/tests/: test_commands.py  test_models.py  test_serializers.py  test_services.py  test_views.py
loadtests/k6/: perf_test.js
spectators/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
spectators/migrations/: 0001_initial.py  0002_initial.py
spectators/tests/: test_views.py
users/: admin.py  factories.py  models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
