# ============================================================================
# pyproject.toml - Configuration consolidée Cinema API
# ============================================================================
# Ce fichier centralise toute la configuration des outils Python du projet.
# Remplace : mypy.ini, pytest.ini, .flake8, setup.cfg
# ============================================================================

[project]
name = "cinema-api"
version = "1.0.0"
description = "API REST complète pour la gestion de films, auteurs et spectateurs avec intégration TMDb"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Cinema Team" }
]
keywords = ["django", "drf", "api", "cinema", "tmdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[project.urls]
"Homepage" = "https://github.com/USERNAME/cinema"
"Documentation" = "http://localhost:8000/api/docs/"
"Repository" = "https://github.com/USERNAME/cinema"

# ============================================================================
# DEPENDENCIES
# ============================================================================

dependencies = [
    "Django>=4.2.5,<5.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.2.2",
    "psycopg2-binary>=2.9.6",
    "gunicorn>=20.1.0",
    "python-decouple>=3.8",
    "drf-spectacular>=0.29.0",
    "django-extensions>=3.2.1",
    "Pillow>=9.0.0",
    "whitenoise>=6.5.0",
    "django-filter>=23.2",
    "django-redis>=5.4.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.0",
    "pytest-django>=4.11.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "Faker>=38.0.0",
    # Type checking
    "mypy>=1.19.0",
    "django-stubs>=5.1.0",
    "djangorestframework-stubs>=3.15.0",
    "types-redis>=4.6.0",
    "types-requests>=2.32.0",
    # Linting & Formatting
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    # Pre-commit
    "pre-commit>=4.0.0",
]

# ============================================================================
# BUILD SYSTEM
# ============================================================================

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cinema*", "core*", "users*", "films*", "authors*", "spectators*"]
exclude = ["tests*", "staticfiles*", "logs*"]

# ============================================================================
# BLACK - Code Formatter
# ============================================================================

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | migrations
    | staticfiles
    | \.venv
    | venv
)/
'''

# ============================================================================
# ISORT - Import Sorter
# ============================================================================

[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".git",
    "__pycache__",
    "migrations",
    "staticfiles",
    ".venv",
    "venv",
]
skip_glob = ["**/migrations/*"]
known_django = ["django"]
known_drf = ["rest_framework"]
known_first_party = ["cinema", "core", "users", "films", "authors", "spectators"]
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "DRF",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
default_section = "THIRDPARTY"
force_single_line = false
combine_as_imports = true
force_sort_within_sections = true

# ============================================================================
# RUFF - Fast Python Linter (remplace flake8)
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "migrations",
    "staticfiles",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "DJ"]
"*/tests/*" = ["ARG001", "ARG002"]
"conftest.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["cinema", "core", "users", "films", "authors", "spectators"]

# ============================================================================
# MYPY - Static Type Checker
# ============================================================================

[tool.mypy]
python_version = "3.12"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

# Strictness - Balanced
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = false
allow_untyped_globals = true
allow_redefinition = true
ignore_errors = false

# Output
show_error_codes = true
show_column_numbers = true
show_error_context = false
pretty = true

# Exclude patterns
exclude = [
    "migrations/",
    "__pycache__/",
    "staticfiles/",
    "venv/",
    "\\.venv/",
    "tests/",
    ".*factories\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "*.factories",
    "factory.*",
    "factory_boy.*",
    "pytest.*",
    "_pytest.*",
    "redis.*",
    "django_redis.*",
    "rest_framework_simplejwt.*",
    "drf_spectacular.*",
    "tmdbv3api.*",
    "gunicorn.*",
    "decouple.*",
    "django_filters.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.factories"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "cinema.settings"

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cinema.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Note: La config de coverage reste dans pytest.ini pour compatibilité docker
addopts = [
    "--reuse-db",
    "-v",
    "--tb=short",
]
testpaths = [
    "authors/tests",
    "core",
    "films/tests",
    "spectators/tests",
    "users",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================

[tool.coverage.run]
source = ["authors", "films", "spectators", "users", "core"]
branch = false
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/tests/*",
    "*/test_*.py",
    "*_tests.py",
    "conftest.py",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
    "staticfiles/*",
    ".venv/*",
    "venv/*",
    "*factories.py",
    "loadtests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
show_missing = true
precision = 2
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# BANDIT - Security Linter
# ============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "migrations",
    "staticfiles",
]
skips = [
    "B101",  # assert used (ok in tests)
    "B104",  # hardcoded bind all interfaces
]

# ============================================================================
# PRE-COMMIT HOOKS CONFIG (reference)
# ============================================================================
# Voir .pre-commit-config.yaml pour la configuration des hooks
